--- a/app/templates/temperature.html
+++ b/app/templates/temperature.html
@@ -380,7 +380,7 @@
 <!-- Input field for command-based relay control -->
 <div id="command-control">
     <form id="commandForm">
-        <input type="text" id="commandInput" placeholder="Enter ON or OFF" required>
+        <input type="text" id="commandInput" placeholder="Enter JONATHAN or PHIRI" required>
         <button type="submit">Send Command</button>
     </form>
     <p id="commandStatus"></p>
